<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Partyfi</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_create_party">CreatePartyActivity</string>
    <string name="title_activity_delete_party">DeletePartyActivity</string>
    <string name="email_hint">Enter your Email</string>
    <string name="date_hint">Pick a date</string>
    <string name="time_hint">Pick a time</string>
    <string name="date_label">Date</string>
    <string name="time_label">Time</string>
    <string name="str_btn_find">Find</string>
    <string name="hnt_et_location">Enter location</string>

</resources>
